--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.11.0"
+    "react-router-dom": "^7.11.0",
+    "react-vant": "^3.3.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
