--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "antd": "^6.1.1",
     "axios": "^1.13.2",
+    "js-pinyin": "^0.2.7",
+    "pinyin-pro": "^3.27.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.11.0",
-    "react-vant": "^3.3.5"
+    "react-vant": "^3.3.5",
+    "wudidawang-s": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
